--- a/web/index.html
+++ b/web/index.html
@@ -100,7 +100,8 @@
             </section>
             <section class="metadata">
                 <span class="bias-label" aria-label="Bias label">Center</span> |
-                <span class="confidence" aria-label="Confidence score">Confidence: 85%</span>
+                <span class="confidence" aria-label="Confidence score">Confidence: 85%</span> |
+                <span class="composite-score" aria-label="Composite ranking score">Rank: 0.92</span>
             </section>
             <section class="explanation">
                 <p>Explanation of bias classification goes here.</p>
