--- a/web/index.html
+++ b/web/index.html
@@ -377,7 +377,7 @@
                 <h2>Article Title</h2>
             </header>
             <figure class="article-figure">
-                <img src="https://via.placeholder.com/600x400" alt="Sample article image" class="article-image" loading="lazy">
+                <img src="https://via.placeholder.com/600x400" alt="Sample article" class="article-image" loading="lazy">
                 <figcaption class="article-caption">Sample image caption describing the article image.</figcaption>
             </figure>
             <section class="summary">
